--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
   <link rel="icon" href="./images/icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="./images/apple-touch-icon.png">
   <meta property="og:title" content="Можно мягче">
+  <meta property="og:description" content="Страница о взгляде на перфекционизм в работе и учёбе.">
   <meta property="og:url" content="index.html">
   <meta property="og:image" content="images/og.jpg">
   <meta property="twitter:card" content="summary_large_image">
-  <title></title>
+  <title>Надо сделать идеально</title>
   <link rel="stylesheet" href="./fonts/font.css" />
   <link rel="stylesheet" href="./styles/style.css" />
 </head>
