--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <span class="title_word">сделать</span>
     <span>идеально</span>
   </h1>
-  <video class="video" src="./video/cover-video.mp4" poster="/images/poster.png" autoplay muted loop></video>
+  <video class="video" src="./video/cover-video.mp4" poster="./images/poster.png" autoplay muted loop></video>
 
 </body>
 
