--- a/index.html
+++ b/index.html
@@ -19,11 +19,14 @@
 </head>
 
 <body>
+
   <h1 class="page__heading">
-     <span class="title_word">Надо</span>
-    <span class="title_word">сделать</span>
-    <span>идеально</span>
-  </h1>
+    Надо
+    сделать
+   идеально
+ </h1>  
+
+   
   <video class="video" src="./video/cover-video.mp4" poster="./images/poster.png" autoplay muted loop></video>
 
 </body>
