--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 </head>
 
 <body>
-
   <h1 class="page__heading">
-    Надо
-    сделать
-   идеально
- </h1>  
+     <span class="title_word">Надо</span>
+    <span class="title_word">сделать</span>
+    <span class= "title_star">идеально</span>
+  </h1>
 
-   
+
+  
   <video class="video" src="./video/cover-video.mp4" poster="./images/poster.png" autoplay muted loop></video>
 
 </body>
