--- a/index.html
+++ b/index.html
@@ -18,11 +18,9 @@
   <link rel="stylesheet" href="./styles/style.css" />
 </head>
 <body>
-  <h1 class="page__heading">
-    <span>Надо</span>
-    <span>сделать</span>
-    <span class="title_star">идеально</span>
-  </h1>
-  <video class="video" src="./video/cover-video.mp4" poster="./images/poster.png" autoplay muted loop></video>
+  <h1 class="page__heading">Надо сделать идеально</h1>
+  <video class="video" poster="./images/poster.png" autoplay muted loop>
+    <source src="./video/cover-video.mp4" type="video/mp4">
+  </video>
 </body>
 </html>
